sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: illegal start of simple expression
		while ((i>=0)&&(buffer<getValeur(i)))) {
                                                     ^